public/styles/hiw.css
.hiw-container {
  width: 100%;
  background-color: var(--bg-100);
}

.hiw-inner {
  display: flex;
  align-items: center;
  border-width: 2px;
  position: relative;
  flex-wrap: wrap;
  box-sizing: border-box;
  justify-content: space-between;
  max-width: 1280px;
  height: 824px;
  margin: 0 auto;
  padding: 16px;
}

.hiw-inner .content {
  width: 100%;
}

.hiw-inner .heading-container {
  display: flex;
  flex-direction: column;
  justify-content: center;
  text-align: center;
}

.hiw-inner h2 {
  color: var(--green-500);
  font-size: xx-large;
  margin: 0;
  font-weight: var(--bold-md);
}

.hiw-inner .hiw-grid {
  display: grid;
  grid-template-columns: repeat(3, 1fr);
  grid-column-gap: 32px;
  grid-row-gap: 32px;
}

.hiw-inner .hiw-grid svg {
  fill: var(--green-500);
  background-color: var(--green-200);
  width: 32px;
  padding: 16px;
  border-radius: var(--round-md);
  margin-bottom: 16px;
}

.hiw-inner .hiw-grid .grid1 {
  background-color: var(--bg-100-a);
  border: solid;
  border-color: var(--gray-300);
  border-width: 1px;
  border-radius: var(--round-md);
  padding: 32px;
}
.hiw-inner .hiw-grid .grid2 {
  background-color: var(--bg-100-a);
  border: solid;
  border-color: var(--gray-300);
  border-width: 1px;
  border-radius: var(--round-md);
  padding: 32px;
}
.hiw-inner .hiw-grid .grid3 {
  background-color: var(--bg-100-a);
  border: solid;
  border-color: var(--gray-300);
  border-width: 1px;
  border-radius: var(--round-md);
  padding: 32px;
}

.hiw-inner .hiw-grid h3 {
  font-size: x-large;
  margin: 0;
  color: var(--green-500);
}

.hiw-inner .hiw-grid .chips span {
  text-transform: uppercase;
  font-size: var(--font-sm);
  font-weight: lighter;
  background-color: var(--gray-300-a);
  padding: 4px 10px;
  border-radius: var(--round-md);
  white-space: nowarp;
  text-wrap: nowarp;
}



@media (max-width: 1024px) {
  .hiw-inner .hiw-grid {
    grid-template-columns: repeat(2, 1fr);
  }
}

@media (max-width: 676px) {
  .hiw-inner .hiw-grid {
    grid-template-columns: 1fr;
  }
}

